# tv-manager-app

./: .gitignore  README.md  app.py  database.py  main.py  pyproject.toml  restart.sh  scheduler.py  scraper.py
templates/: index.html  list.html
tests/: test_database.py  test_scraper.py
